# flask_app

./: .env  .gitignore  .travis.yml  CHANGELOG.md  ChangeLog  Pipfile  main.py  requirements.txt  setup.cfg  setup.py  setup.sh
app/: __init__.py  config.py  models.py  views.py
creator/: copier.py  main.py
flask_app/: Pipfile  README.md  __main__.py  config.py  main.py  manage.py
flask_app/api/blueprints/: base_blueprint.py  users.py
flask_app/api/controllers/: base_controller.py  user_controller.py
flask_app/api/models/: user.py
flask_app/app/: __init__.py  config.py  views.py
flask_app/tests/: base_test.py  test_hello_world.py
tests/: base.py  test_hello_world.py
{{appname}}/: .env  README.md  manage.py
{{appname}}/app/: __init__.py  config.py  views.py
{{appname}}/tests/: base.py
