[metadata]
name = flask-app
author = Kimbugwe Simon Peter
author-email = kimbsimon2@gmail.com
summary = A tool to create flask boilerplate code
description-file = README.md
description-content-type = text/markdown
home-page = https://github.com/kimbugp/flask_app
project_urls =
    Source Code = https://github.com/kimbugp/flask_app
license = MIT
classifier =
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[entry_points]
console_scripts =
    flask-app = creator.main:main